# DeepTube

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  Mermaid.tsx  YouTubePlayer.tsx  api.ts  index.css  main.tsx
scripts/: run_pipeline.py
src/agent_fyp/: __init__.py  config.py  llm.py  logging_config.py  main.py  models.py  progress.py
src/agent_fyp/agents/: __init__.py  ingestion.py  memory.py  orchestrator.py  slide.py  summary.py
src/agent_fyp/api/: app.py  jobs.py  schemas.py
src/agent_fyp/tools/: __init__.py  chat.py  mermaid.py  pptx_builder.py  summarizer.py  vectorstore.py  youtube.py
tests/: conftest.py  test_api.py  test_byok.py  test_cache_history.py  test_chat.py  test_mermaid.py  test_orchestrator.py  test_pptx_builder.py  test_summarizer.py  test_transcript_citations.py  test_vectorstore.py  test_youtube.py
