[project]
name = "agentfyp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.136.3",
    "faster-whisper>=1.2.1",
    "google-adk>=2.1.0",
    "google-genai>=1.75.0",
    "pydantic-settings>=2.14.1",
    "python-pptx>=1.0.2",
    "uuid6>=2025.0.1",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
agentfyp = "agent_fyp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_fyp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
